2008-10-28  Alp Toker  <alp@nuanti.com>

        Fix GTK DRT following build breakage in r37928.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):
        (runTest):
        (main):

2008-10-28  Alp Toker  <alp@nuanti.com>

        Reviewed by Mark Rowe.

        Fix recently introduced double-free crashes in GTK DRT.

        LayoutTestController was made ref-counted in r36606 and Mac/Win DRT
        were updated to call ->deref() but GTK DRT was still deleting
        gLayoutTestController manually. This patch updates GTK to match the
        other ports and resolves the memory allocation issues.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (runTest):

2008-10-28  Alp Toker  <alp@nuanti.com>

        Reviewed by Mark Rowe.

        Fix GTK DRT hang when running the tests.

        Update output from the DRT tool to print an additional '#EOF' to match
        breaking changes that were made in r37434.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):

2008-10-28  Adele Peterson  <adele@apple.com>

        Reviewed by Sam Weinig. 

        Specify which Localizable.strings to update since we don't always want to update the file in the same
        directory where we're searching for the strings to localize.
        
        * Scripts/extract-localizable-strings:
        * Scripts/update-webkit-localizable-strings:

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Add support for enabling the profiler, so the profiling tests can continue
        work now that the profiler is not always enabled.

        https://bugs.webkit.org/show_bug.cgi?id=21927

        <rdar://problem/6211578> Make the JavaScript profiler opt-in, so it does
        not slow down JavaScript all the time

        Reviewed by Darin Adler and Kevin McCullough.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Make the editor use spaces.
        * DumpRenderTree/LayoutTestController.cpp: